# video_pixelator

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  main.cpp
